# cmake-template

./: .gitignore  CMakeLists.txt  README.md  template.sublime-project
cmake/: FindLog4cplus.cmake
src/: CMakeLists.txt
src/server/: CMakeLists.txt  main.cc
src/utils/: CMakeLists.txt  error.hh  logger.cc  logger.hh
tests/: CMakeLists.txt  example.cc  test_main.cc
