CMAKE_MINIMUM_REQUIRED(VERSION 3.2)

SET(PROJECT_PREFIX "template")
PROJECT(${PROJECT_PREFIX})

SET(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake" "${CMAKE_MODULE_PATH}")

# Simple stuff to keep Visual Studio from putting the files in weird locations
SET(BIN_OUTPUT_DIR ${${PROJECT_PREFIX}_BINARY_DIR}/bin)
SET(LIB_OUTPUT_DIR ${${PROJECT_PREFIX}_BINARY_DIR}/lib)

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${BIN_OUTPUT_DIR})
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${BIN_OUTPUT_DIR})
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${LIB_OUTPUT_DIR})

SET(Boost_USE_STATIC_LIBS ON)

SET(REQUIRED_CXX_FEATURES
  cxx_auto_type
  cxx_constexpr
  cxx_deleted_functions
  cxx_lambdas
  cxx_nullptr
  cxx_override
  cxx_range_for
)

SET(CMAKE_CXX_COMPILER "clang++")
SET(CMAKE_C_COMPILER "clang")
ADD_DEFINITIONS(-DPACKAGE_NAME=${PROJECT_PREFIX})

ENABLE_TESTING()

ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(tests)
